<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="project"
            type="com.alicanadasapplication.app.database.entities.Projects" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCounter"
        app:cardCornerRadius="@dimen/_35sp"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_bg_green_400_23_border_black_900"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/txtProjectId"
                style="@style/txtOutline_1"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:background="@color/green_400_23"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{String.valueOf(project.projectId)}"
                tools:text="@string/lbl_project_id" />
            <TextView
                android:id="@+id/txtLıstTitle"
                style="@style/txtOutline_1"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@{project.title}"
                tools:text="@string/lbl_titile" />

            <TextView
                android:id="@+id/txtListManagerId"
                style="@style/txtOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:background="@color/green_400_23"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{String.valueOf(project.managerId)}"
                tools:text="@string/lbl_manager_id2" />

            <TextView
                android:id="@+id/txtListContent"
                style="@style/txtOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_25pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{project.content}"
                tools:text="@string/lbl_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>

